src/app-groups/ssp/apps/identity-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids
  labels:
    app: ids-label
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ids
  template:
    metadata:
      labels:
        app: ids-label
        service: ids
    spec:
      containers:
        - name: ids
          image: placeholder:placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /.well-known/openid-configuration
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 20
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /.well-known/openid-configuration
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
          volumeMounts:
            - name: dpkeys
              mountPath: /mnt/k8s/ids-dpkeys

      volumes:
        - name: dpkeys
          persistentVolumeClaim:
            claimName: ssp--ids--PLACEHOLDER--dp-persistent-volume-claim
