src/app-groups/ssp/apps/identity-service/templates/psql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids-psql
  labels:
    app: ids-psql-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ids-psql-label
  template:
    metadata:
      labels:
        app: ids-psql-label
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
          imagePullPolicy: IfNotPresent
          resources: {}
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgresql-storage
      volumes:
        - name: postgresql-storage
          persistentVolumeClaim:
            claimName: placeholder-postgresql-persistent-volume-claim
